--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "graphql-tools": "^3.0.4",
     "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.1",
+    "koa-cors": "^0.0.16",
     "koa-router": "^7.4.0",
     "mongoose": "^5.1.6"
   }
